apps/ecommerce/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ecommerce-backend
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ecommerce-backend

  template:
    metadata:
      labels:
        app: ecommerce-backend

    spec:
      imagePullSecrets:
        - name: dockerhub-secret

      containers:
        - name: ecommerce-backend

          image: rajvam6806/e-commerce-backend:9e533ac582d793b4e3ea8ade99be44a9c7e56c39

          imagePullPolicy: Always

          ports:
            - containerPort: 8080
