apps/ecommerce/backend/postgres-service.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: ecommerce

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432

  type: ClusterIP
