apps/ecommerce/backend/service.yml
apiVersion: v1
kind: Service

metadata:
  name: ecommerce-backend-service
  namespace: ecommerce
  labels:
    backstage.io/kubernetes-id: e-commerce-frontend

spec:
  selector:
    app: ecommerce-backend

  ports:
  - port: 80
    targetPort: 8080


  
  type: ClusterIP
