apps/ecommerce/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-backend-ingress
  namespace: ecommerce
  labels:
    backstage.io/kubernetes-id: e-commerce-backend

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: ecommerce-backend-service
                port:
                  number: 8080
